--- a/public/static/templates/antenna.html
+++ b/public/static/templates/antenna.html
@@ -2,8 +2,15 @@
     <head>
         <title>いろいろ巡回ツール</title>
         <script>
-            function reload(param){
-                document.location.href='/antenna?method=update&id=' + param;
+            function reload(id, current){
+                var url = '/antenna?method=update&id=' + id;
+                if(current){
+                    url += '&current=true';
+                }
+                document.location.href = url;
+            }
+            function reserveItem(id){
+                document.location.href = '/antenna?method=update&id=' + id + '&reserve=true';
             }
             function send(){
                 var element = document.getElementsByName('name')[0];
@@ -22,12 +29,25 @@
                 }
             }
             function load(id){
+                var now = "{{now}}";
                 var row = document.getElementById('tr-id-' + id);
-                document.getElementsByName('name')[0].value = row.children[4].children[0].text;
-                var href = row.children[4].children[0].href;
-                if(href != 'javascript:void(0)'){
-                    document.getElementsByName('url')[0].value = href;
+                if(row.children[4].children.length > 0){
+                    document.getElementsByName('name')[0].value = row.children[4].children[0].text;
+                    var href = row.children[4].children[0].href;
+                    if(href != 'javascript:void(0)'){
+                        document.getElementsByName('url')[0].value = href;
+                    }
+                }else{
+                    document.getElementsByName('name')[0].value = row.children[4].innerHTML;
+                    if(row.children[5].children.length > 0){
+                        var href = row.children[5].children[0].href;
+                        if(href != 'javascript:void(0)'){
+                            document.getElementsByName('url')[0].value = href;
+                        }
+                    }
                 }
+                var next = row.children[3].innerHTML;
+                document.getElementsByName('current')[0].value = next <= now;
                 document.getElementsByName('id_')[0].value = id;
                 var expression = row.children[1].innerHTML;
                 var options = document.getElementsByTagName('option');
@@ -49,11 +69,17 @@
                             document.location.href='/antenna?method=update&id=' + id_
                                 + '&name=' + value
                                 + '&url=' + document.getElementsByName('url')[0].value
-                                + '&span=' + select.options[select.selectedIndex].value;
+                                + '&span=' + select.options[select.selectedIndex].value
+                                + '&current=' + document.getElementsByName('current')[0].value;
                         }
                     }
                 }else{
                     send();
+                }
+            }
+            function finish(id){
+                if(window.confirm('このタスクを完了しますか？')){
+                    document.location.href = '/antenna?method=update&id=' + id + '&finish=true';
                 }
             }
 
@@ -98,6 +124,7 @@
                     <input type="button" onclick="send()" value="作成">
                     <input type="button" onclick="update()" value="上書き">
                     <input type="hidden" name="id_">
+                    <input type="hidden" name="current">
                 </td>
             </tr>
         </table>
@@ -110,21 +137,23 @@
                 <th>次回</th>
                 <th>タイトル</th>
                 <th>URL</th>
-                <th>削除</th>
+                <th>操作</th>
             </tr>
             {% for item in items %}
-            <tr id="tr-id-{{item.id}}"{% if item.get('next','') > now %} class="future" {% endif %}>
+            <tr id="tr-id-{{item.id}}"{% if item.get('next','') > now or item.span == 'complete' %} class="future" {% endif %}>
                 <td onclick="load('{{item.id}}')">{{item.id}}</td>
                 <th>{{util.span_key_to_text(item.span)}}</th>
                 <td>{{item.past}}</td>
                 <td>{% if item.next %}{{item.next}}{% endif %}</td>
+                <td>{% if item.span == 'complete' %}{{item.name | escape}}{% else %}<a href="{% if item.url and item.get('next','') <= now %}{{item.url}}{% else %}javascript:void(0){% endif %}"
+                        onclick='setTimeout({% if item.span == "once" and item.get('next','') <= now %}finish("{{item.id}}"){% else %}reload("{{item.id | escape}}", {% if item.get('next','') > now %}true{% else %}false{% endif %}){% endif %}, 10)' {% if item.url and item.get('next','') <= now %}target=_blank{% endif %}>{{item.name | escape}}</a>{% endif %}</td>
+                <td>{% if item.url %}<a href="{{item.url}}" target=_blank>{{item.url}}</a>{% endif %}</td>
                 <td>
-                    <a href="{{item.url or 'javascript:void(0)'}}" onclick='setTimeout(reload("{{item.id | escape}}"), 10)' {% if item.url %}target=_blank{% endif %}>{{item.name | escape}}</a>
-                <td>
-                    {% if item.url %}<a href="{{item.url}}" target=_blank>{{item.url}}</a>{% endif %}
-                </td>
-                <td>
-                    <input type="button" value="削除" onclick="deleteItem('{{item.id | escape}}')">
+                    {% if item.get('next','') > now or item.get('next', '') == '' or item.span == 'complete' %}
+                        <input type="button" value="削除" onclick="deleteItem('{{item.id}}')">
+                    {% else %}
+                        <input type="button" value="保留" onclick="reserveItem('{{item.id}}')">
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
