--- a/public/static/templates/antenna.html
+++ b/public/static/templates/antenna.html
@@ -1,170 +1,203 @@
 <html>
-    <head>
-        <title>いろいろ巡回ツール</title>
-        <script>
-            function reload(id, current){
-                var url = '/antenna?method=update&id=' + id;
-                if(current){
-                    url += '&current=true';
+
+<head>
+    <title>いろいろ巡回ツール</title>
+    <script>
+        function reload(id, current) {
+            var url = '/antenna?method=update&id=' + id;
+            if (current) {
+                url += '&current=true';
+            }
+            document.location.href = url;
+        }
+
+        function reserveItem(id) {
+            document.location.href = '/antenna?method=update&id=' + id + '&reserve=true';
+        }
+
+        function deleteItem(param) {
+            if (window.confirm(param + '番を削除します。')) {
+                document.location.href = '/antenna?method=delete&id=' + param;
+            }
+        }
+
+        function load(id) {
+            var now = "{{now}}";
+            var row = document.getElementById('tr-id-' + id);
+            if (row.children[4].children.length > 0) {
+                document.getElementsByName('name')[0].value = row.children[4].children[0].text;
+                var href = row.children[4].children[0].href;
+                if (href != 'javascript:void(0)') {
+                    document.getElementsByName('url')[0].value = href;
                 }
-                document.location.href = url;
             }
-            function reserveItem(id){
-                document.location.href = '/antenna?method=update&id=' + id + '&reserve=true';
-            }
-            function send(){
-                var element = document.getElementsByName('name')[0];
-                if(element.value){
-                    var value = element.value;
-                    element.value = '';
-                    var select = document.getElementsByName('span')[0];
-                    document.location.href='/antenna?method=create&name=' + value
-                        + '&url=' + document.getElementsByName('url')[0].value
-                        + '&memo=' + document.getElementsByName('memo')[0].value
-                        + '&span=' + select.options[select.selectedIndex].value;
-                }
-            }
-            function deleteItem(param){
-                if(window.confirm(param + '番を削除します。')){
-                    document.location.href='/antenna?method=delete&id=' + param;
-                }
-            }
-            function load(id){
-                var now = "{{now}}";
-                var row = document.getElementById('tr-id-' + id);
-                if(row.children[4].children.length > 0){
-                    document.getElementsByName('name')[0].value = row.children[4].children[0].text;
-                    var href = row.children[4].children[0].href;
-                    if(href != 'javascript:void(0)'){
+            else {
+                document.getElementsByName('name')[0].value = row.children[4].innerHTML;
+                if (row.children[5].children.length > 0) {
+                    var href = row.children[5].children[0].href;
+                    if (href != 'javascript:void(0)') {
                         document.getElementsByName('url')[0].value = href;
                     }
-                }else{
-                    document.getElementsByName('name')[0].value = row.children[4].innerHTML;
-                    if(row.children[5].children.length > 0){
-                        var href = row.children[5].children[0].href;
-                        if(href != 'javascript:void(0)'){
-                            document.getElementsByName('url')[0].value = href;
-                        }
-                    }
-                }
-                document.getElementsByName('memo')[0].value = row.children[5].innerHTML
-                var next = row.children[3].innerHTML;
-                document.getElementsByName('current')[0].value = next <= now;
-                document.getElementsByName('id_')[0].value = id;
-                var expression = row.children[1].innerHTML;
-                var options = document.getElementsByTagName('option');
-                for(var i = 0; i < options.length; i++){
-                    if(options[i].innerHTML == expression){
-                        document.getElementsByName('span')[0].selectedIndex = i;
-                    }
-                }
-                window.scrollTo(0, 0);
-            }
-            function update(){
-                var id_ = document.getElementsByName('id_')[0].value;
-                if(id_){
-                    if(window.confirm(id_ + '番を上書きしますか？')){
-                        var element = document.getElementsByName('name')[0];
-                        if(element.value){
-                            var value = element.value;
-                            element.value = '';
-                            var select = document.getElementsByName('span')[0];
-                            document.location.href='/antenna?method=update&id=' + id_
-                                + '&name=' + value
-                                + '&url=' + document.getElementsByName('url')[0].value
-                                + '&memo=' + document.getElementsByName('memo')[0].value
-                                + '&span=' + select.options[select.selectedIndex].value
-                                + '&current=' + document.getElementsByName('current')[0].value;
-                        }
-                    }
-                }else{
-                    send();
                 }
             }
-            function finish(id){
-                if(window.confirm('このタスクを完了しますか？')){
-                    document.location.href = '/antenna?method=update&id=' + id + '&finish=true';
+            document.getElementsByName('memo')[0].value = row.children[5].innerHTML
+            var next = row.children[3].innerHTML;
+            document.getElementsByName('current')[0].value = next <= now;
+            document.getElementsByName('id')[0].value = id;
+            var expression = row.children[1].innerHTML;
+            var options = document.getElementsByTagName('option');
+            for (var i = 0; i < options.length; i++) {
+                if (options[i].innerHTML == expression) {
+                    document.getElementsByName('span')[0].selectedIndex = i;
                 }
             }
+            window.scrollTo(0, 0);
+        }
 
-        </script>
-        <style>
-            table{
-                margin: 10px;
+        function finish(id) {
+            if (window.confirm('このタスクを完了しますか？')) {
+                document.location.href = '/antenna?method=update&id=' + id + '&finish=true';
             }
-            table,th,td {
-                padding: 4px;
-                border: 1px solid #666;
-                border-collapse: collapse;
-            }
-            .future{
-                background-color:#ccc;
-            }
-        </style>
-    </head>
-    <body>
-        <h2>いろいろ巡回ツール</h2>
+        }
+    </script>
+    <style>
+        table {
+            margin: 10px;
+        }
+        
+        table,
+        th,
+        td {
+            padding: 4px;
+            border: 1px solid #666;
+            border-collapse: collapse;
+        }
+        
+        .future {
+            background-color: #ccc;
+        }
+    </style>
+</head>
+
+<body>
+    <h2>いろいろ巡回ツール</h2>
+    <form id='createForm'>
         <table>
             <tr>
                 <th>タイトル</th>
-                <td><input type="text" name="name"></input></td>
+                <td><input type="text" name="name"></input>
+                </td>
             </tr>
             <tr>
                 <th>URL</th>
-                <td><input type="text" name="url"></input></td>
+                <td><input type="text" name="url"></input>
+                </td>
             </tr>
             <tr>
                 <th>メモ</th>
-                <td><input type="text" name="memo"></input></td>
+                <td><input type="text" name="memo"></input>
+                </td>
             </tr>
             <tr>
                 <th>周期</th>
                 <td>
                     <select name="span">
-                        {% for span_item in span_list %}
-                        <option value="{{span_item.key}}">{{span_item.text}}</option>
-                        {% endfor %}
-                    </select>
+                                                {% for span_item in span_list %}
+                                                <option value="{{span_item.key}}">{{span_item.text}}</option>
+                                                {% endfor %}
+                                            </select>
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
-                    <input type="button" onclick="send()" value="作成">
-                    <input type="button" onclick="update()" value="上書き">
-                    <input type="hidden" name="id_">
+                    <input type="button" value="作成" id='createButton' disabled>
+                    <input type="button" value="上書き" id='updateButton' disabled>
+                    <input type="hidden" name="id">
                     <input type="hidden" name="current">
                 </td>
             </tr>
         </table>
-        <p>今日のタスク: {{util.count(items, util.is_current_uncomplete)}}<br>その他の未完了タスク: {{util.count(items, util.is_future_uncomplete)}}</p>
-        <table>
-            <tr>
-                <th>id</th>
-                <th>周期</th>
-                <th>前回</th>
-                <th>次回</th>
-                <th>タイトル</th>
-                <th>メモ</th>
-                <th>操作</th>
-            </tr>
-            {% for item in items %}
-            <tr id="tr-id-{{item.id}}"{% if util.is_future(item) or item.span == 'complete' %} class="future" {% endif %}>
-                <td onclick="load('{{item.id}}')">{{item.id}}</td>
-                <th>{{util.span_key_to_text(item.span)}}</th>
-                <td>{{item.past}}</td>
-                <td>{% if item.next %}{{item.next}}{% endif %}</td>
-                <td>{% if item.span == 'complete' %}{{item.name | escape}}{% else %}<a href="{% if item.url and util.is_current(item) %}{{item.url}}{% else %}javascript:void(0){% endif %}"
-                        onclick='setTimeout({% if item.span == "once" and util.is_current(item) %}finish("{{item.id}}"){% else %}reload("{{item.id | escape}}", {% if util.is_future(item) %}true{% else %}false{% endif %}){% endif %}, 10)' {% if item.url and util.is_current(item) %}target=_blank{% endif %}>{{item.name | escape}}</a>{% endif %}</td>
-                <td>{{item.memo}}</td>
-                <td>
-                    {% if util.is_future(item) or item.get('next', '') == '' or item.span == 'complete' %}
-                        <input type="button" value="削除" onclick="deleteItem('{{item.id}}')">
-                    {% else %}
-                        <input type="button" value="保留" onclick="reserveItem('{{item.id}}')">
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
-    </body>
+    </form>
+    <p>今日のタスク: {{util.count(items, util.is_current_uncomplete)}}<br>その他の未完了タスク: {{util.count(items, util.is_future_uncomplete)}}</p>
+    <table>
+        <tr>
+            <th>id</th>
+            <th>周期</th>
+            <th>前回</th>
+            <th>次回</th>
+            <th>タイトル</th>
+            <th>メモ</th>
+            <th>操作</th>
+        </tr>
+        {% for item in items %}
+        <tr id="tr-id-{{item.id}}" {% if util.is_future(item) or item.span=='complete' %} class="future" {% endif %}>
+            <td onclick="load('{{item.id}}')">{{item.id}}</td>
+            <th>{{util.span_key_to_text(item.span)}}</th>
+            <td>{{item.past}}</td>
+            <td>{% if item.next %}{{item.next}}{% endif %}</td>
+            <td>{% if item.span == 'complete' %}{{item.name | escape}}{% else %}<a href="{% if item.url and util.is_current(item) %}{{item.url}}{% else %}javascript:void(0){% endif %}" onclick='setTimeout({% if item.span == "once" and util.is_current(item) %}finish("{{item.id}}"){% else %}reload("{{item.id | escape}}", {% if util.is_future(item) %}true{% else %}false{% endif %}){% endif %}, 10)'
+                    {% if item.url and util.is_current(item) %}target=_blank{% endif %}>{{item.name | escape}}</a>{% endif %}</td>
+            <td>{{item.memo}}</td>
+            <td>
+                {% if util.is_future(item) or item.get('next', '') == '' or item.span == 'complete' %}
+                <input type="button" value="削除" onclick="deleteItem('{{item.id}}')"> {% else %}
+                <input type="button" value="保留" onclick="reserveItem('{{item.id}}')"> {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    <script src='/public/static/myflow-client-core.js'></script>
+    <script src='/public/static/myflow-client-consumer.js'></script>
+    <script src='/public/static/myflow-client-components.js'></script>
+    <script src='/public/static/myflow-client-util.js'></script>
+    <script>
+        var buttons = [byid('createButton'), byid('updateButton')];
+        new Event('onload', window)
+            .to(buttonEnable(buttons))
+            .to(log({
+                'name': 'ロード完了'
+            }));
+
+        new Event('onclick', buttons)
+            .to(buttonEnable(buttons, false))
+            .to(formToExchange(byid('createForm')))
+            .to(function(exchange) {
+                if (exchange.getHeader('id') && exchange.getElement().id == 'updateButton') {
+                    if (window.confirm(exchange.getHeader('id') + '番を上書きしますか？')) {
+                        exchange.setHeader('method', 'update');
+                        return exchange;
+                    }
+                }
+                else {
+                    delete exchange.getHeaders()['id'];
+                    exchange.setHeader('method', 'create');
+                    return exchange;
+                }
+            })
+            .to(function(exchange) {
+                var name = exchange.getHeader('name');
+                if (!name) {
+                    alert('タイトルは必須です。');
+                    buttonEnable(buttons)(exchange);
+                }
+                else {
+                    return exchange;
+                }
+            })
+            .to(log({
+                'name': 'これから送る',
+                'header': true
+            }))
+            .to(request('/antenna-exchange'));
+
+        new Reply('/antenna-exchange')
+            .to(log({
+                'name': '送られてきた',
+                'body': true,
+                'header': true
+            }))
+            .to(pageReload());
+    </script>
+</body>
+
 </html>
