--- a/public/static/templates/antenna.html
+++ b/public/static/templates/antenna.html
@@ -16,21 +16,17 @@
             var row = document.getElementById('tr-id-' + id);
             if (row.children[4].children.length > 0) {
                 document.getElementsByName('name')[0].value = row.children[4].children[0].text;
-                var href = row.children[4].children[0].href;
-                if (href != 'javascript:void(0)') {
-                    document.getElementsByName('url')[0].value = href;
-                }
             }
             else {
                 document.getElementsByName('name')[0].value = row.children[4].innerHTML;
                 if (row.children[5].children.length > 0) {
-                    var href = row.children[5].children[0].href;
-                    if (href != 'javascript:void(0)') {
-                        document.getElementsByName('url')[0].value = href;
-                    }
                 }
             }
-            document.getElementsByName('memo')[0].value = row.children[5].innerHTML
+            var link = row.querySelector('.external')
+            if(link){
+                document.getElementsByName('url')[0].value = link.href
+            }
+            document.getElementsByName('memo')[0].value = row.children[5].innerText
             var next = row.children[3].innerHTML;
             document.getElementsByName('current')[0].value = next <= now;
             document.getElementsByName('id')[0].value = id;
@@ -65,6 +61,13 @@
         
         .future {
             background-color: #ccc;
+        }
+        .external{
+            background-image: url('/public/static/external-link.svg');
+            background-repeat: no-repeat;
+            background-size: 16px;
+            background-position: center;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -109,45 +112,66 @@
         </table>
     </form>
     <p>今日のタスク: {{util.count(items, util.is_current_uncomplete)}}<br>その他の未完了タスク: {{util.count(items, util.is_future_uncomplete)}}</p>
-    <table>
-        <tr>
-            <th>id</th>
-            <th>周期</th>
-            <th>前回</th>
-            <th>次回</th>
-            <th>タイトル</th>
-            <th>メモ</th>
-            <th>操作</th>
-        </tr>
-        {% for item in items %}
-        <tr id="tr-id-{{item.id}}" {% if util.is_future(item) or item.span=='complete' %} class="future" {% endif %}>
-            <td onclick="load('{{item.id}}')">{{item.id}}</td>
-            <th>{{util.span_key_to_text(item.span)}}</th>
-            <td>{{item.past}}</td>
-            <td>{% if item.next %}{{item.next}}{% endif %}</td>
-            <td>{% if item.span == 'complete' %}{{item.name | escape}}{% else %}<a href="{% if item.url and util.is_current(item) %}{{item.url}}{% else %}javascript:void(0){% endif %}" onclick='setTimeout({% if item.span == "once" and util.is_current(item) %}finish("{{item.id}}"){% else %}reload("{{item.id | escape}}", {% if util.is_future(item) %}true{% else %}false{% endif %}){% endif %}, 10)'
-                    {% if item.url and util.is_current(item) %}target=_blank{% endif %}>{{item.name | escape}}</a>{% endif %}</td>
-            <td>{{item.memo}}</td>
-            <td>
-                {% if util.is_future(item) or item.get('next', '') == '' or item.span == 'complete' %}
-                <input type="button" value="削除" disabled> {% else %}
-                <input type="button" value="保留" disabled> {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
+    <table id="mainTable">
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>周期</th>
+                <th>前回</th>
+                <th>次回</th>
+                <th>タイトル</th>
+                <th>メモ</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in items %}
+            <tr id="tr-id-{{item.id}}" {% if util.is_future(item) or item.span=='complete' %} class="future" {% endif %}>
+                <td onclick="load({{item.id}})">{{item.id}}</td>
+                <th>{{util.span_key_to_text(item.span)}}</th>
+                <td>{{item.past}}</td>
+                <td>{% if item.next %}{{item.next}}{% endif %}</td>
+                <td>{% if item.span == 'complete' %}{{item.name | escape}}{% else %}<a href="javascript:void(0)" onclick='setTimeout({% if item.span == "once" and util.is_current(item) %}finish("{{item.id}}"){% else %}reload("{{item.id | escape}}", {% if util.is_future(item) %}true{% else %}false{% endif %}){% endif %}, 10)'>{{item.name | escape}}</a>{% endif %}{% if item.url %}<a href="{{item.url}}" class="external" target="_blank"> 　</a>{% endif %}</td>
+                <td>{{item.memo}}</td>
+                <td>
+                    {% if util.is_future(item) or item.get('next', '') == '' or item.span == 'complete' %}
+                    <input type="button" value="削除" disabled> {% else %}
+                    <input type="button" value="保留" disabled> {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
     <script src='/public/static/myflow-client-core.js'></script>
     <script src='/public/static/myflow-client-consumer.js'></script>
     <script src='/public/static/myflow-client-components.js'></script>
     <script src='/public/static/myflow-client-util.js'></script>
     <script>
+        var links = document.querySelectorAll('a[href="javascript:void(0)"]');
+        var idTdElements = []
+        document.querySelectorAll('#mainTable tbody tr').forEach(function(element){
+            idTdElements.push(element.querySelector('td'))
+        })
         var buttons = document.querySelectorAll('input[type=button]');
+        
         new Event('onload', window)
             .to(buttonEnable(buttons))
             .to(log({
                 'name': 'ロード完了'
             }));
-
+/*
+        new Event('onclick', links)
+            .to(log({'name': 'links'}));
+            
+        new Event('onclick', idTdElements)
+            .to(log({'name': 'idtd'}))
+            .to(function(exchange){
+                var now = "{{now}}";
+                var id = exchange.getElement().innerText;
+                var row = exchange.getElement().parentNode;
+                // TBD
+            });
+        */
         new Event('onclick', document.querySelectorAll('input[value="保留"]'))
             .to(buttonEnable(buttons, false))
             .to(function(exchange){
