--- a/public/static/style.css
+++ b/public/static/style.css
@@ -14,6 +14,10 @@ td {
     background-color: #ccc;
 }
 
+a {
+    text-decoration: none;
+}
+
 .external {
     background-image: url('/public/static/external-link.svg');
     background-repeat: no-repeat;
